--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask==2.0.1
-numpy>=1.21
+Flask==2.1.2
+flask-cors==3.0.10
+numpy==1.22.4
 pandas==1.4.2
-tensorflow>=2.14
-werkzeug==1.0.1
+tensorflow==2.9.1
